[package]
name = "tokio-pager"
version = "1.0.1"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
description = "An asynchronous, Tokio-friendly pager implementation"
documentation = "https://docs.rs/tokio-pager"
readme = "README.md"
repository = "https://github.com/mdippery/tokio-pager"
#homepage
keywords = ["cli", "less", "pager", "terminal", "tui"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
tokio = { version = "1.47.1", features = ["process", "io-util"] }

[dev-dependencies]
temp-env = "0.3.6"
